--- a/exercise1.html
+++ b/exercise1.html
@@ -25,9 +25,21 @@
 
 <p>The three best bands/musical groups are:</p>
 <!-- Put an ORDERED list here -->
-
+    <ol>
+        <li>The Kinks</li>
+        <li>One Direction</li>
+        <li>Big time rush</li>
+    </ol>
 <p><strong>Philadelphia foods include:</strong></p>
 <!-- Put an UNORDERED list here -->
+    <ul>
+        <li>water ice</li>
+        <li>cheesesteaks</li>
+        <li> soft pretzels</li>
+        <li>italian hoagies</li>
+    
+    
+    </ul>
 </body>
 
 </html>
