--- a/FallonNavBar/index.html
+++ b/FallonNavBar/index.html
@@ -67,6 +67,6 @@
 
 <script src="js/scripts.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-   
+    <footer><p class="text-center">&copy; 2023</p></footer>  
 </body>
 </html>
