--- a/FallonNavBar/index.html
+++ b/FallonNavBar/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Welcome</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">  
+	<link href="css/styles.css" rel="stylesheet"> 
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   </head>
 <body>
 <nav id="mine" class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="images/just-a-placeholder-logo.svg" alt="logo"></a>
+    <a class="navbar-brand" href="index.html"><img src="images/noun-mug-1547927.svg" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -64,9 +65,16 @@
 </header>
 <!-- big headline two buttons end mountains -->   
 </div>
-
+<footer class="d-flex align-items-center justify-content-between p-4">
+<p class="ms-3">&copy; 2023 Company, Inc. All rights reserved.</p>	
+<div class="d-flex">	
+	<p class="ms-3"><a class="link-dark" href="#"><i class="bi bi-instagram fs-3"></i></a></p>
+	<p class="ms-3"><a class="link-dark" href="#"><i class="bi bi-twitter fs-3"></i></a></p>	
+	<p class="ms-3"><a class="link-dark" href="#"><i class="bi bi-facebook fs-3"></i></a></p>
+</div>	
+</footer>
 <script src="js/scripts.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-    <footer><p class="text-center">&copy; 2023</p></footer>  
+  
 </body>
 </html>
