--- a/FallonNavBar/pages/services.html
+++ b/FallonNavBar/pages/services.html
@@ -1,2 +1,30 @@
-<h1>I am page Services</h1>
+<!doctype html> 
+<h1>Our Menu</h1>
+
+<div class="card-group">
+  <div class="card">
+    <img src="/images/coffee.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Coffee</h5>
+      <p class="card-text">Our coffee menu offers a range of delicious and unique coffee options. For those who enjoy a light and smooth flavor, we offer our house blend of Colombian and Brazilian beans. If you're looking for a more bold flavor, we have espresso and French Roast. We also have flavored coffee options including French Vanilla, Hazelnut, and Caramel. For those who like something cold, we have iced coffee, frappes, and smoothies.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="/images/food.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Pastries</h5>
+      <p class="card-text">We offer traditional favorites like croissants, danishes, and muffins. We also offer a selection of gluten-free and sugar-free pastries, so everyone can enjoy a sweet treat. Our pastries are freshly baked every day!</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="/images/Lunch.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Lunch items</h5>
+      <p class="card-text">If you're looking for a tasty lunch option from the coffee shop, you're in luck! We have a variety of delicious options to choose from  freshly-made sandwiches to a cup of yogurt with fresh berries or granola. </p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
 
