--- a/FallonNavBar/index.html
+++ b/FallonNavBar/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome</title>
+    <title>Bootstrap demo</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet"> 
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -18,10 +18,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="pages/products.html">Products</a>
+          <a class="nav-link active" aria-current="page" href="pages/products.html">Abuot us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pages/services.html">Services</a>
+          <a class="nav-link" href="pages/services.html">Menu</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,11 +51,12 @@
     <div class="row gx-5 align-items-center justify-content-center">
       <div class="teaser col-sm-12 col-md-10 col-lg-8">
         <div class="my-5 text-center">
-          <h1 class="text-white  display-5 fw-bolder  mb-2">A Bootstrap 5 template</h1>
-          <p class="text-white  lead fw-normal mb-4">Roof party bespoke gochujang, pop-up VHS twee jianbing craft beer</p>
+          <h1 class="text-white  display-5 fw-bolder  mb-2">Welcome</h1>
+          <p class="text-white  lead fw-normal mb-4">Visit us in store at 4233 Ridge Ave Philadelphia, PA</p>
           <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-            <a class="special-link btn btn-primary btn-lg px-4 me-sm-3" href="pages/products.html">Get Started</a>
-            <a class="btn btn-outline-light btn-lg px-4" href="https://icons.getbootstrap.com/" target="_blank"><i class="bi bi-robot"></i> Learn More</a>
+            <a class="special-link btn btn-primary btn-lg px-4 me-sm-3" href="pages/products.html">About us</a>
+            <a class="btn btn-outline-light btn-lg px-4" href="https://icons.getbootstrap.com/" target="_blank">
+                Menu</a>
           </div>
         </div>
       </div>
