--- a/FallonNavBar/pages/products.html
+++ b/FallonNavBar/pages/products.html
@@ -7,13 +7,15 @@
     <div class="row  justify-content-center">
       <div class="col-lg-6">
         <div class="text-center mb-5">
-          <h1 class="fw-bolder">About us</h1>
-          <p class="lead fw-normal text-muted mb-0">We are a small, locally-owned cafe, located on 4233 Ridge Ave in Philadelphia, PA. Our mission is to serve the highest quality coffee in an inviting and relaxed atmosphere. We strive to make each and every customer feel welcome and at home. We offer a wide selection of specialty coffees, teas, and pastries, with something to please everyone. Our baristas have years of experience and take pride in delivering the perfect cup of coffee every time. Stop in for your morning cup or an afternoon pick-me-up. We look forward to serving you soon!</p>
+          <h1 class="fw-bolder" style="color: #FDF7EA">About us
+           </h1>
+             
+          <p style="color: #FDF7EA">We are a small, locally-owned cafe, located on 4233 Ridge Ave in Philadelphia, PA. Our mission is to serve the highest quality coffee in an inviting and relaxed atmosphere. We strive to make each and every customer feel welcome and at home. We offer a wide selection of specialty coffees, teas, and pastries, with something to please everyone. Our baristas have years of experience and take pride in delivering the perfect cup of coffee every time. Stop in for your morning cup or an afternoon pick-me-up. We look forward to serving you soon!</p>
         </div>
       </div>
     </div>
     <div class="row ">
-      <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="/images/nathan-dumlao-gOn7dKcCWKg-unsplash.jpg" alt="..." /></div>
+      <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="/images/jazmin-quaynor-9Y8vxVQN4o4-unsplash.jpg" alt="..." /></div>
       <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="/images/Cafe4.jpg.webp" alt="..." /></div>
       <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="/images/freddy-g-KEmgWXjxDok-unsplash.jpg" alt="..." /></div>
     </div>
@@ -41,7 +43,7 @@
         <div class="col mb-5 mb-5 mb-xl-0">
           <div class="text-center">
             <img class="img-fluid rounded-circle mb-4 px-4" 
-                 src="/images/Member1.jpg" alt="..." />
+                 src="/images/Member1.webp" alt="..." />
             <h5 class="fw-bolder">Eliza Jones</h5>
             <div class="fst-italic text-muted">Founder &amp; CEO</div>
           </div>
